--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,20 @@
 <html>
-	<head>
-		<title>My blog</title>
-	</head>
-	<body>
-		<div>
-			<h1><a	href="">Django	Girls	Blog</a></h1>
-		</div>
-		<div>
-			<p>published:	14.06.2014,	12:14</p>
-			<h2><a	href="">My	first	post</a></h2>
-			<p>Aenean	eu	leo	quam.	Pellentesque	ornare	sem	lacinia	quam	venenatis		vestibulum.	Don
-		</div>
-		<div>
-			<p>published:	14.06.2014,	12:14</p>
-			<h2><a	href="">My	second	post</a></h2>
-			<p>Aenean	eu	leo	quam.	Pellentesque			ornare	sem	lacinia	quam	venenatis			vestibulum.	Don
-		</div>
-	</body>
+  <head>
+     <title>My blog</title>
+  </head>
+  <body>
+    <div>
+      <h1><a  href="">Django Blog</a></h1>
+    </div>
+    <div>
+       <p>published: 14.06.2016, 12:14</p>
+        <h2><a  href="">My  first post</a></h2>
+        <p>Aenean eu  leo quam. Pellentesque  ornare  sem lacinia quam  venenatis vestibulum. Don</p>
+    </div>
+    <div>
+    <p>published: 14.06.2014, 12:14</p>
+    <h2><a  href="">My  second  post</a></h2>
+    <p>Aenean eu  leo quam. Pellentesque  ornare  sem   lacinia quam  venenatis vestibulum. Don
+    </div>
+  </body>
 </html>
